# notiva-backend

./: text.txt
Notiva/: .gitignore  Dependences.py  Meeting_llm.py  Meetingdb.py  Note_taker.py  Procfile  README.md  STT_runner.py  dashboard.py  logging_config.py  main.py  pyproject.toml  requirements.txt
Notiva/prompt_library/: final_summary_pormpt.txt
Notiva/routes/: meetings.py
Notiva/utils/: finalstt.py  main.py  meeting_llm.py  meetingdb.py  model.py  note.py  note_taking.py  notetakkker.py  test.py
